master way more going on behind the scenesbut still ugly

--- a/jade/index.jade
+++ b/jade/index.jade
@@ -18,7 +18,7 @@ html
       main
         article
           h1 Hello, World!
-          p This is my first post. This site looks pretty awful for sure. But I'm just getting started.
+          p This is my first post. I guess it's not so much a post as a placeholder.
       aside
         div.widget
           h2 What's this?
