--- a/css/source/atoms/_grid.scss
+++ b/css/source/atoms/_grid.scss
@@ -9,3 +9,13 @@ aside{
 	@include span-columns(4);
 	padding: 1em;
 }
+@include media($bass-max){
+	main{
+		@include span-columns(12);
+		padding: 1em;
+	}
+	aside{
+		@include span-columns(12);
+		padding: 1em;
+	}
+}
