--- a/src/pages/index.ejs
+++ b/src/pages/index.ejs
@@ -11,7 +11,7 @@
   <body>
     <section class="<%= className('app', 'page-header') %>">
       <h1 class="<%= className('app', 'project-name') %>">Cayman</h1>
-      <h2 class="<%= className('app', 'project-tagline') %>">A responsive theme for your project on GitHub Pages</h2>
+      <h2 class="<%= className('app', 'project-tagline') %>">A responsive doggo for your project on GitHub Pages</h2>
       <a href="#" class="<%= className('app', 'btn') %>">View on GitHub</a>
       <a href="#" class="<%= className('app', 'btn') %>">Download .zip</a>
       <a href="#" class="<%= className('app', 'btn') %>">Download .tar.gz</a>
