lots of spike work

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,11 +1,15 @@
+---
+layout: home
+---
 <!DOCTYPE html>
 <html lang="en-us">
   {% include head.html %}
   <body>
-    <section class="app-main-content__3bXRm">
-
-      {{ content }}
-
+    {% include site-nav.html %}
+    <section class="home-content__2t-Ey">
+      <div class="home-inner-wrapper__3wXf0">
+        {{ content }}
+      </div>
     </section>
   </body>
 </html>
