--- a/src/layouts/page.ejs
+++ b/src/layouts/page.ejs
@@ -5,7 +5,7 @@ layout: page
 <html lang="en-us">
   {% include head.html %}
   <body>
-    <section class="app-main-content__3bXRm">
+    <section class="<%= className('app', 'main-content') %>">
 
       {{ content }}
 
