--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,8 +1,11 @@
+---
+layout: page
+---
 <!DOCTYPE html>
 <html lang="en-us">
   {% include head.html %}
   <body>
-    <section class="<%= className('app', 'main-content') %>">
+    <section class="">
 
       {{ content }}
 
