--- a/src/layouts/home.ejs
+++ b/src/layouts/home.ejs
@@ -1,11 +1,15 @@
+---
+layout: home
+---
 <!DOCTYPE html>
 <html lang="en-us">
   {% include head.html %}
   <body>
-    <section class="<%= className('app', 'main-content') %>">
-
-      {{ content }}
-
+    {% include site-nav.html %}
+    <section class="<%= className('home', 'content') %>">
+      <div class="<%= className('home', 'inner-wrapper') %>">
+        {{ content }}
+      </div>
     </section>
   </body>
 </html>
