--- a/src/css/lib/mixins.css
+++ b/src/css/lib/mixins.css
@@ -1,3 +1,7 @@
+@value small-breakpoint: 840px;
+@value medium-breakpoint: 1024px;
+@value large-breakpoint: 2020px;
+
 @define-mixin large {
   @media screen and (min-width: large-breakpoint) {
      @mixin-content;
@@ -5,13 +9,19 @@
 }
 
 @define-mixin medium {
-  @media screen and (min-width: medium-breakpoint) and (max-width: large-breakpoint) {
+  @media screen and (min-width: medium-breakpoint) {
+     @mixin-content;
+  }
+}
+
+@define-mixin medium-down {
+  @media screen and (max-width: medium-breakpoint) {
      @mixin-content;
   }
 }
 
 @define-mixin small {
-  @media screen and (max-width: medium-breakpoint) {
+  @media screen and (max-width: small-breakpoint) {
      @mixin-content;
   }
 }
