--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,6 +21,7 @@ layout: home
           <main class="mdl-grid home-main__19GAD">
             <div class="mdl-cell mdl-cell--12-col">
                 <h1>{{ page.title}}</h1>
+                {{ content }}
             </div>
           </main>
         </div>
