--- a/src/layouts/home.ejs
+++ b/src/layouts/home.ejs
@@ -21,6 +21,7 @@ layout: home
           <main class="mdl-grid <%= className('home', 'main') %>">
             <div class="mdl-cell mdl-cell--12-col">
                 <h1>{{ page.title}}</h1>
+                {{ content }}
             </div>
           </main>
         </div>
