--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,24 @@
 ---
-layout: page
+layout: home
 ---
 <!DOCTYPE html>
 <html lang="en-us">
   {% include head.html %}
   <body>
-    <section class="">
-
-      {{ content }}
-
-    </section>
+    <!-- Uses a header that contracts as the page scrolls down. -->
+    <div class="mdl-layout mdl-js-layout">
+      {% include page-header.html%}
+      <div class="mdl-layout__content">
+        <div class="mdl-grid home-inner-wrapper__3wXf0">
+          <main class="mdl-grid home-main__19GAD">
+            <div class="mdl-cell mdl-cell--12-col">
+                <h1>{{ page.title}}</h1>
+                {{ content }}
+            </div>
+          </main>
+        </div>
+      </div>
+      {% include footer.html %}
+    </div>
   </body>
 </html>
