--- a/src/layouts/page.ejs
+++ b/src/layouts/page.ejs
@@ -1,14 +1,24 @@
 ---
-layout: page
+layout: home
 ---
 <!DOCTYPE html>
 <html lang="en-us">
   {% include head.html %}
   <body>
-    <section class="<%= className('app', 'main-content') %>">
-
-      {{ content }}
-
-    </section>
+    <!-- Uses a header that contracts as the page scrolls down. -->
+    <div class="mdl-layout mdl-js-layout">
+      {% include page-header.html%}
+      <div class="mdl-layout__content">
+        <div class="mdl-grid <%= className('home', 'inner-wrapper') %>">
+          <main class="mdl-grid <%= className('home', 'main') %>">
+            <div class="mdl-cell mdl-cell--12-col">
+                <h1>{{ page.title}}</h1>
+                {{ content }}
+            </div>
+          </main>
+        </div>
+      </div>
+      {% include footer.html %}
+    </div>
   </body>
 </html>
