--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,23 @@
 ---
 layout: post
 ---
-{% include head.html %}
-<h2>{{ page.title }}</h2>
-
-{{ content }}
+<html lang="en-us">
+  {% include head.html %}
+  <body>
+    <!-- Uses a header that contracts as the page scrolls down. -->
+    <div class="mdl-layout mdl-js-layout">
+      {% include page-header.html%}
+      <div class="mdl-layout__content">
+        <div class="mdl-grid home-inner-wrapper__3wXf0">
+          <main class="mdl-grid home-main__19GAD">
+            <div class="mdl-cell mdl-cell--12-col">
+                <h1>{{ page.title}}</h1>
+                {{ content }}
+            </div>
+          </main>
+        </div>
+        {% include footer.html %}
+      </div>
+    </div>
+  </body>
+</html>
