--- a/src/layouts/post.ejs
+++ b/src/layouts/post.ejs
@@ -1,7 +1,23 @@
 ---
 layout: post
 ---
-{% include head.html %}
-<h2>{{ page.title }}</h2>
-
-{{ content }}
+<html lang="en-us">
+  {% include head.html %}
+  <body>
+    <!-- Uses a header that contracts as the page scrolls down. -->
+    <div class="mdl-layout mdl-js-layout">
+      {% include page-header.html%}
+      <div class="mdl-layout__content">
+        <div class="mdl-grid <%= className('home', 'inner-wrapper') %>">
+          <main class="mdl-grid <%= className('home', 'main') %>">
+            <div class="mdl-cell mdl-cell--12-col">
+                <h1>{{ page.title}}</h1>
+                {{ content }}
+            </div>
+          </main>
+        </div>
+        {% include footer.html %}
+      </div>
+    </div>
+  </body>
+</html>
