--- a/_includes/cards/card2.html
+++ b/_includes/cards/card2.html
@@ -1,6 +1,6 @@
 <div class="mdl-card mdl-shadow--2dp mdl-cell mdl-cell--{{include.size}}-col">
   <div class="mdl-card__title card-title__EZjgt">
-    <h2 class="mdl-card__title-text">Welcome</h2>
+    <h2 class="mdl-card__title-text">Card 2</h2>
   </div>
   <div class="mdl-card__supporting-text">
     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
