--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@ layout: post
                 {% if page.categories %}
                   <span class="post-categories__3odpn">categories: <span class="post-category__2EnXn">{{ page.categories }}</span></span>
                 {% endif %}
-                <div class="mdl-cell--12-col post-content__3gEDG">
+                <div class="post-content__3gEDG">
                   {{ content }}
                 </div>
                 {% if page.tags %}
@@ -26,7 +26,7 @@ layout: post
                     {% endfor %}
                   </div>
                 {% endif %}
-                <a class="mdl-button mdl-js-button mdl-js-ripple-effect post-back__azZFK" href="/blog">back</a>
+                <a class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent post-back__azZFK" href="/blog">back</a>
             </div>
           </main>
         </div>
