--- a/_layouts/postred.html
+++ b/_layouts/postred.html
@@ -26,7 +26,7 @@ layout: postred
                     {% endfor %}
                   </div>
                 {% endif %}
-                <a class="mdl-button mdl-js-button mdl-js-ripple-effect post-back__azZFK" href="/blog">back</a>
+                <a class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent post-back__azZFK" href="/blog">back</a>
             </div>
           </main>
         </div>
