--- a/css/app.css
+++ b/css/app.css
@@ -456,6 +456,15 @@ a {
   color: #03a9f4;
 }
 
+iframe {
+  margin: 2rem 0;
+  min-height: 518px;
+}
+
+iframe + p {
+  margin-top: 2rem;
+}
+
 .mdl-grid {
   width: 100%;
 }
