--- a/src/css/modules/a1-base.css
+++ b/src/css/modules/a1-base.css
@@ -15,6 +15,15 @@ a {
   color: blue;
 }
 
+iframe {
+  margin: 2rem 0;
+  min-height: 518px;
+
+  + p {
+    margin-top: 2rem;
+  }
+}
+
 
 :global {
   .mdl-grid {
